- Fixed COMP-ISSUE-91: Add basic support for ErrorMessage and FriendlyName with .net resource backed localization

- Added IPAddressValidator

- minor fix for self validation not getting called

- Applied Eric Hauser's patch (with changes) fixing COMP-ISSUE-68
  "Support for external validations"
  The patch includes a contributor that allows for classes to decorate a method 
  with a [ValidateSelf] attribute so the class can provide validation logic in code.

- Added Polish messages (contributed by kamil)

Beta 1
======

- Use DynamicMethod for performance when available

- Added interface for ValidatorRunner as validation entry point.

- Fixed COMP-36
  "Misleading validation error messages in english language"

- Applied Ken Egozi's patch fixing COMP-40
  "A possible typo in SameAsValidator causing possible invalid cast exception"

- Applied Ken Egozi's patch adding NotSameAsValidator (COMP-41)

- Added a decimal range validator

- Made the range validator web enabled

- Applied Brian DeMarzo's patch fixing COMP-30
  "Improved handling of empty strings, client valiator script tweaks"

- Applied Gokhan Altinoren's patch fixing COMP-28
  "There isn't a ctor to set error message in 
   ValidateGroupNotEmptyAttribute and ValidateCollectionNotEmptyAttribute"

- Applied Yuri's patch fixing COMP-21
  "NullableType Validators, Correct web-validation for primitive types"

- Applied patch by Tim Haines fixing COMP-26
  "Date Validator doesn't validate nulls. Problem occurs server side and client side."

- Applied patch by David N. Godfrey that converted most of ActiveRecord's validators
  to the Castle Validator component.

- Added a way to use external resources to override the default messages.

- Applied Brian DeMarzo's patch fixing COMP-20
  "Added SetValidator"

- Applied Yuri's patch fixing COMP-19
  "Fixed some validation issues"

- Applied Yuri's patch fixing COMP-18
  "Clientside validation for date and regular expressions"
